--- a/portfolioweb/web/index.html
+++ b/portfolioweb/web/index.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Hi, I'm Nakul Dev M V, a computer engineer passionate about building innovative tech solutions.">
+  <meta name="description"
+    content="Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Nakul Dev">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <title>Nakul Dev</title>
   <link rel="manifest" href="manifest.json">
-  
+
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-  
+
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -56,48 +45,37 @@
     }
 
     .contain {
-      display:block;
-      width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
 
-    .stretch {
-      display:block;
-      width:100%; height:100%;
-    }
-
     .cover {
-      display:block;
-      width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-    }
-
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
-
-    .bottomLeft {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-
-    .bottomRight {
-      position: absolute;
-      bottom: 0;
-      right: 0;
     }
 
     body {
       background: #252525;
     }
+
+    .bottom-message {
+      font-size: 15px;
+      color: #fff;
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      font-style: normal;
+      font-family: 'Courier New', Courier, monospace;
+    }
+
     svg {
       position: fixed;
-      top: 50%;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
       height: 150px;
@@ -117,75 +95,53 @@
   <script src="flutter.js" defer></script>
 
 </head>
+
 <body>
-  <svg viewBox="0 0 100 100">
-    <g fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="6">
-      <!-- left line -->
-      <path d="M 21 40 V 59">
-        <animateTransform
-          attributeName="transform"
-          attributeType="XML"
-          type="rotate"
-          values="0 21 59; 180 21 59"
-          dur="2s"
+  <div class="center">
+    <svg viewBox="0 0 100 100">
+      <g fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="6">
+        <!-- left line -->
+        <path d="M 21 40 V 59">
+          <animateTransform attributeName="transform" attributeType="XML" type="rotate" values="0 21 59; 180 21 59"
+            dur="2s" repeatCount="indefinite" />
+        </path>
+        <!-- right line -->
+        <path d="M 79 40 V 59">
+          <animateTransform attributeName="transform" attributeType="XML" type="rotate" values="0 79 59; -180 79 59"
+            dur="2s" repeatCount="indefinite" />
+        </path>
+        <!-- top line -->
+        <path d="M 50 21 V 40">
+          <animate attributeName="d" values="M 50 21 V 40; M 50 59 V 40" dur="2s" repeatCount="indefinite" />
+        </path>
+        <!-- bottom line -->
+        <path d="M 50 60 V 79">
+          <animate attributeName="d" values="M 50 60 V 79; M 50 98 V 79" dur="2s" repeatCount="indefinite" />
+        </path>
+        <!-- top box -->
+        <path d="M 50 21 L 79 40 L 50 60 L 21 40 Z">
+          <animate attributeName="stroke" values="rgba(255,255,255,1); rgba(100,100,100,0)" dur="2s"
+            repeatCount="indefinite" />
+        </path>
+        <!-- mid box -->
+        <path d="M 50 40 L 79 59 L 50 79 L 21 59 Z" />
+        <!-- bottom box -->
+        <path d="M 50 59 L 79 78 L 50 98 L 21 78 Z">
+          <animate attributeName="stroke" values="rgba(100,100,100,0); rgba(255,255,255,1)" dur="2s"
+            repeatCount="indefinite" />
+        </path>
+        <animateTransform attributeName="transform" attributeType="XML" type="translate" values="0 0; 0 -19" dur="2s"
           repeatCount="indefinite" />
-      </path>
-      <!-- right line -->
-      <path d="M 79 40 V 59">
-        <animateTransform
-          attributeName="transform"
-          attributeType="XML"
-          type="rotate"
-          values="0 79 59; -180 79 59"
-          dur="2s"
-          repeatCount="indefinite" />
-      </path>
-      <!-- top line -->
-      <path d="M 50 21 V 40">
-        <animate
-          attributeName="d"
-          values="M 50 21 V 40; M 50 59 V 40"
-          dur="2s"
-          repeatCount="indefinite" />
-      </path>
-      <!-- btm line -->
-      <path d="M 50 60 V 79">
-        <animate
-          attributeName="d"
-          values="M 50 60 V 79; M 50 98 V 79"
-          dur="2s"
-          repeatCount="indefinite" />
-      </path>
-      <!-- top box -->
-      <path d="M 50 21 L 79 40 L 50 60 L 21 40 Z">
-        <animate
-          attributeName="stroke"
-          values="rgba(255,255,255,1); rgba(100,100,100,0)"
-          dur="2s"
-          repeatCount="indefinite" />
-      </path>
-      <!-- mid box -->
-      <path d="M 50 40 L 79 59 L 50 79 L 21 59 Z"/>
-      <!-- btm box -->
-      <path d="M 50 59 L 79 78 L 50 98 L 21 78 Z">
-        <animate
-          attributeName="stroke"
-          values="rgba(100,100,100,0); rgba(255,255,255,1)"
-          dur="2s"
-          repeatCount="indefinite" />
-      </path>
-      <animateTransform
-        attributeName="transform"
-        attributeType="XML"
-        type="translate"
-        values="0 0; 0 -19"
-        dur="2s"
-        repeatCount="indefinite" />
-    </g>
-  </svg>
+      </g>
+    </svg>
+  </div>
+
+  <div class="bottom-message">
+    <strong>NB:</strong> This website is currently under development
+  </div>
 
   <!-- Flutter bootstrap script -->
   <script src="flutter_bootstrap.js" async></script>
-
 </body>
+
 </html>
