--- a/portfolioweb/web/index.html
+++ b/portfolioweb/web/index.html
@@ -10,7 +10,7 @@
     content="Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Nakul Dev">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
