--- a/portfolioweb/web/index.html
+++ b/portfolioweb/web/index.html
@@ -33,6 +33,8 @@
       min-height: 100%;
       background-color: #000000;
       background-size: 100% 100%;
+      /* cursor: url('mouse_pointer.png'), auto; */
+
     }
 
     .center {
@@ -58,9 +60,7 @@
       object-fit: cover;
     }
 
-    body {
-      background: #252525;
-    }
+    
 
     .bottom-message {
       font-size: 15px;
