--- a/web/index.html
+++ b/web/index.html
@@ -1,157 +1,36 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description"
-    content="Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions.">
+  <meta name="description" content="Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Nakul Dev">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>Nakul Dev</title>
   <link rel="manifest" href="manifest.json">
-
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-
-  <style id="splash-screen-style">
-    html {
-      height: 100%
-    }
-
-    body {
-      margin: 0;
-      min-height: 100%;
-      background-color: #181818;
-      background-size: 100% 100%;
-      font-family: 'Chakra Petch', sans-serif;
-    }
-
-    .center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-    }
-
-    .contain {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-
-    .cover {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .bottom-message {
-      font-size: 15px;
-      color: #fff;
-      position: absolute;
-      bottom: 20px;
-      width: 100%;
-      text-align: center;
-    }
-
-    svg {
-      position: fixed;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      height: 150px;
-      width: 150px;
-    }
-  </style>
-
-  <script id="splash-screen-script">
+  <!-- ...... -->
+    <script id="splash-screen-script">
     function removeSplashFromWeb() {
       document.getElementById("splash")?.remove();
       document.getElementById("splash-branding")?.remove();
       document.body.style.background = "transparent";
     }
   </script>
+    <!-- ...... -->
 
-  <!-- Include the Flutter web bootstrap script -->
-  <script src="flutter.js" defer></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Handjet:wght@100..900&family=Jersey+10&display=swap"
-    rel="stylesheet">
 </head>
-
 <body>
-  <div class="center">
-    <svg viewBox="0 0 100 100">
-      <g fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="6">
-        <!-- left line -->
-        <path d="M 21 40 V 59">
-          <animateTransform attributeName="transform" attributeType="XML" type="rotate" values="0 21 59; 180 21 59"
-            dur="2s" repeatCount="indefinite" />
-        </path>
-        <!-- right line -->
-        <path d="M 79 40 V 59">
-          <animateTransform attributeName="transform" attributeType="XML" type="rotate" values="0 79 59; -180 79 59"
-            dur="2s" repeatCount="indefinite" />
-        </path>
-        <!-- top line -->
-        <path d="M 50 21 V 40">
-          <animate attributeName="d" values="M 50 21 V 40; M 50 59 V 40" dur="2s" repeatCount="indefinite" />
-        </path>
-        <!-- bottom line -->
-        <path d="M 50 60 V 79">
-          <animate attributeName="d" values="M 50 60 V 79; M 50 98 V 79" dur="2s" repeatCount="indefinite" />
-        </path>
-        <!-- top box -->
-        <path d="M 50 21 L 79 40 L 50 60 L 21 40 Z">
-          <animate attributeName="stroke" values="rgba(255,255,255,1); rgba(100,100,100,0)" dur="2s"
-            repeatCount="indefinite" />
-        </path>
-        <!-- mid box -->
-        <path d="M 50 40 L 79 59 L 50 79 L 21 59 Z" />
-        <!-- bottom box -->
-        <path d="M 50 59 L 79 78 L 50 98 L 21 78 Z">
-          <animate attributeName="stroke" values="rgba(100,100,100,0); rgba(255,255,255,1)" dur="2s"
-            repeatCount="indefinite" />
-        </path>
-        <animateTransform attributeName="transform" attributeType="XML" type="translate" values="0 0; 0 -19" dur="2s"
-          repeatCount="indefinite" />
-      </g>
-    </svg>
-  </div>
-
-  <div class="bottom-message" id="loadingMessage">
-    Loading
-  </div>
-
-  <script>
-    const loadingMessage = document.getElementById('loadingMessage');
-    let dots = 0;
-
-    setInterval(() => {
-      // Cycle through the loading states
-      loadingMessage.innerText = 'Loading' + '.'.repeat(dots);
-      dots = (dots + 1) % 4; // Cycle through 0 to 3
-    }, 500); // Change the interval as needed
-  </script>
-
-  <!-- Flutter bootstrap script -->
   <script src="flutter_bootstrap.js" async></script>
 </body>
-
 </html>
