--- a/web/index.html
+++ b/web/index.html
@@ -7,18 +7,18 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description"
-    content="Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions.">
+    content="Hi, I'm ChienNQ, a computer engineer passionate about building innovative tech solutions.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Nakul Dev">
+  <meta name="apple-mobile-web-app-title" content="ChienNQ Dev">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <title>Nakul Dev</title>
+  <title>ChienNQ Dev</title>
   <link rel="manifest" href="manifest.json">
 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
