--- a/web/index.html
+++ b/web/index.html
@@ -86,6 +86,12 @@
       pointer-events: none;
     }
 
+    @media screen and (max-width: 700px) {
+      .words::after {
+        background: none;
+      }
+    }
+
     .word {
       display: block;
       height: 100%;
