modified:   web/index.html

--- a/web/index.html
+++ b/web/index.html
@@ -15,10 +15,17 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Nakul Dev">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="icons/Icon-512.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/Icon-maskable-192.png" rel="mask-icon">
+  <link rel="apple-touch-icon" sizes="512x512" href="icons/Icon-maskable-512.png" rel="mask-icon">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
+
   <title>Nakul Dev</title>
   <link rel="manifest" href="manifest.json">
 
@@ -99,9 +106,9 @@
       }
 
       .words::after {
-       
+
         background: none;
-       
+
       }
     }
 
