--- a/FeedBack_Analysis_report/flutter-portfolio-feedback-pdf.html
+++ b/FeedBack_Analysis_report/flutter-portfolio-feedback-pdf.html
@@ -256,8 +256,12 @@
         <div class="inspiration-item">
             <a href="https://edh.dev/">Edh.dev</a>
         </div>
+        
         <div class="inspiration-item">
             <a href="https://tamalsen.dev/">Tamal Sen</a>
+        </div>
+        <div class="inspiration-item">
+            <a href="https://www.adithyakrishnan.com/">adithyakrishnan</a>
         </div>
     </div>
 </body>
